...

    private func inventoryRoomView() -> some View {
        let viewModel = InventoryViewModel(
            property: propertyExample,
            localRooms: [
                LocalRoom(id: "1", name: "Living Room", checked: true, inventory: [
                    LocalInventory(id: "1.1", propertyId: propertyExample.id, roomId: "1", name: "Sofa", quantity: 1)
                ]),
                LocalRoom(id: "2", name: "Kitchen", checked: true, inventory: [
                    LocalInventory(id: "2.1", propertyId: propertyExample.id, roomId: "2", name: "Table", quantity: 1)
                ])
            ]
        )
...
    private func inventoryStuffView() -> some View {
        let viewModel = InventoryViewModel(
            property: propertyExample,
            localRooms: [
                LocalRoom(id: "1", name: "Living Room", checked: false, inventory: [
                    LocalInventory(id: "1.1", propertyId: propertyExample.id, roomId: "1", name: "Sofa", quantity: 1),
                    LocalInventory(id: "1.2", propertyId: propertyExample.id, roomId: "1", name: "Chair", quantity: 2)
                ]),
                LocalRoom(id: "2", name: "Kitchen", checked: true, inventory: [
                    LocalInventory(id: "2.1", propertyId: propertyExample.id, roomId: "2", name: "Table", quantity: 1)
                ])
            ]
        )
...
