...
        self._property = property
        self._inventoryViewModel = StateObject(wrappedValue: InventoryViewModel(property: property.wrappedValue))
    }

    var body: some View {
        VStack(spacing: 0) {
            TopBar(title: "Inventory")
            VStack {
                Button(action: {
                    inventoryViewModel.isEntryInventory = true
                    navigateToEntry = true
                }, label: {
                    HStack {
...
